{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 113,
  "lineage": "1a4f8169-6f48-a6f5-5aad-26679772e2fe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff4dd898acfb0e67",
            "arn": "arn:aws:ec2:us-west-1:477294694793:instance/i-08bd44e30dfb3d441",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08bd44e30dfb3d441",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "Valdis_2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c377491b37e23d16",
            "private_dns": "ip-10-0-1-164.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.164",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cf4d1b7d4d74e58f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "secondary_private_ips": [
              "10.0.1.100",
              "10.0.1.200"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00e4a6bfda2859e10",
            "tags": {
              "Name": "terraform"
            },
            "tags_all": {
              "Name": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06918eddef7cba48e"
            ]
          },
          "dependencies": [
            "aws_key_pair.Valdis_2",
            "aws_security_group.my-server-sg",
            "aws_subnet.my-subnet",
            "aws_vpc.my-vpc",
            "data.aws_ami.ubuntu",
            "data.http.myip",
            "data.template_file.userdata"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:477294694793:internet-gateway/igw-0a4a07724063f25ec",
            "id": "igw-0a4a07724063f25ec",
            "owner_id": "477294694793",
            "tags": {
              "Name": "terraform"
            },
            "tags_all": {
              "Name": "terraform"
            },
            "vpc_id": "vpc-0b75ea4f61537fb27"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:477294694793:route-table/rtb-0fd636bcaec5a2ea6",
            "id": "rtb-0fd636bcaec5a2ea6",
            "owner_id": "477294694793",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a4a07724063f25ec",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform"
            },
            "tags_all": {
              "Name": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b75ea4f61537fb27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbe7b9845e2137cd",
            "route_table_id": "rtb-0fd636bcaec5a2ea6",
            "subnet_id": "subnet-00e4a6bfda2859e10"
          },
          "dependencies": [
            "aws_internet_gateway.my-igw",
            "aws_route_table.my-rt",
            "aws_subnet.my-subnet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-server-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:477294694793:security-group/sg-06918eddef7cba48e",
            "description": "Allow server acces with SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06918eddef7cba48e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "46.98.147.181/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "server access",
            "name_prefix": "",
            "owner_id": "477294694793",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform"
            },
            "tags_all": {
              "Name": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b75ea4f61537fb27"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:477294694793:subnet/subnet-00e4a6bfda2859e10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e4a6bfda2859e10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "477294694793",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform"
            },
            "tags_all": {
              "Name": "terraform"
            },
            "vpc_id": "vpc-0b75ea4f61537fb27"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:477294694793:vpc/vpc-0b75ea4f61537fb27",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f3fb7b8db25de411",
            "default_route_table_id": "rtb-058a29060e7359c91",
            "default_security_group_id": "sg-044a7e9ba42336c54",
            "dhcp_options_id": "dopt-01b8743746b1c492a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": false,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b75ea4f61537fb27",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-058a29060e7359c91",
            "owner_id": "477294694793"
          }
        }
      ]
    }
  ]
}